--- a/DataTypesMeasuresSimplePlots.ipynb
+++ b/DataTypesMeasuresSimplePlots.ipynb
@@ -407,7 +407,212 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ArqwUL7qm2GB"
+        "id": "ArqwUL7qm2GB",
+        "outputId": "45a8a2ee-4d60-428c-d026-f2e4e39e8da4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        }
+      },
+      "source": [
+        "ad.describe()"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age</th>\n",
+              "      <th>fnlwgt</th>\n",
+              "      <th>education.num</th>\n",
+              "      <th>capital.gain</th>\n",
+              "      <th>capital.loss</th>\n",
+              "      <th>hours.per.week</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>32561.000000</td>\n",
+              "      <td>3.256100e+04</td>\n",
+              "      <td>32561.000000</td>\n",
+              "      <td>32561.000000</td>\n",
+              "      <td>32561.000000</td>\n",
+              "      <td>32561.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>38.581647</td>\n",
+              "      <td>1.897784e+05</td>\n",
+              "      <td>10.080679</td>\n",
+              "      <td>1077.648844</td>\n",
+              "      <td>87.303830</td>\n",
+              "      <td>40.437456</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>13.640433</td>\n",
+              "      <td>1.055500e+05</td>\n",
+              "      <td>2.572720</td>\n",
+              "      <td>7385.292085</td>\n",
+              "      <td>402.960219</td>\n",
+              "      <td>12.347429</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>17.000000</td>\n",
+              "      <td>1.228500e+04</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>28.000000</td>\n",
+              "      <td>1.178270e+05</td>\n",
+              "      <td>9.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>40.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>37.000000</td>\n",
+              "      <td>1.783560e+05</td>\n",
+              "      <td>10.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>40.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>48.000000</td>\n",
+              "      <td>2.370510e+05</td>\n",
+              "      <td>12.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>45.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>90.000000</td>\n",
+              "      <td>1.484705e+06</td>\n",
+              "      <td>16.000000</td>\n",
+              "      <td>99999.000000</td>\n",
+              "      <td>4356.000000</td>\n",
+              "      <td>99.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                age        fnlwgt  ...  capital.loss  hours.per.week\n",
+              "count  32561.000000  3.256100e+04  ...  32561.000000    32561.000000\n",
+              "mean      38.581647  1.897784e+05  ...     87.303830       40.437456\n",
+              "std       13.640433  1.055500e+05  ...    402.960219       12.347429\n",
+              "min       17.000000  1.228500e+04  ...      0.000000        1.000000\n",
+              "25%       28.000000  1.178270e+05  ...      0.000000       40.000000\n",
+              "50%       37.000000  1.783560e+05  ...      0.000000       40.000000\n",
+              "75%       48.000000  2.370510e+05  ...      0.000000       45.000000\n",
+              "max       90.000000  1.484705e+06  ...   4356.000000       99.000000\n",
+              "\n",
+              "[8 rows x 6 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xs9ksgl7ok-z"
+      },
+      "source": [
+        "### 3) Calculate the mean of a numerical variable without using a pre-defined function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f4Y5Jnz7oroQ"
+      },
+      "source": [
+        "#lets use age\n",
+        "age = ad['age']"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z907qZqzoxeg",
+        "outputId": "32ba60b9-1243-4e18-d63c-3f2526958773",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "number_age = len(age)\n",
+        "\n",
+        "sum = 0\n",
+        "\n",
+        "for i in range(number_age):\n",
+        "  sum += age[i]\n",
+        "\n",
+        "mean_age = sum / number_age\n",
+        "print(mean_age)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "38.58164675532078\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VZM_ZSIGpUHf"
+      },
+      "source": [
+        "### 4) Plot the proportion of values in categorical variables."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "45S-RdM_oyJL"
       },
       "source": [
         ""
